--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,10 +1,10 @@
 header {
-    padding: 24px 0px;
+  height: 60px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     font-size: var(--typography-xxs);
-    color: var(--color-white)
+    color: var(--color-white);
   }
 
   .ul-navbar {
