--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -1,17 +1,17 @@
-#projects-subtitle {
-  padding: 24px 24px 24px 48px;
-}
-
 .parenthesis {
   color: var(--color-secondary)
 }
 
 .filter {
-  padding: 0 0 20px 48px
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 20px;
+  align-items: center;
+  gap: 3px;
 }
 
 .filter-title {
-  font-size: var(--typography-xs);
+  font-size: 16px
 }
 
 .projects-list {
@@ -32,6 +32,10 @@
   padding: 12px 12px 12px 16px;
 }
 
+.li-element {
+  color: var(--color-black)
+}
+
 [class~='show-ev'] {
   pointer-events: auto;
   display: block;
@@ -49,13 +53,10 @@
 }
 
 @media screen and (max-width: 1086px) {
-  #projects-subtitle {
-padding: 18px 30px;
-  }
-  .filter {
+  /* .filter {
     display: block;
     padding: 0 30px 18px 30px;
-  }
+  } */
   .projects-list {
     animation: none;
   }
