--- a/src/components/LikesList/LikesList.css
+++ b/src/components/LikesList/LikesList.css
@@ -7,8 +7,9 @@
   }
   
   .like {
-    width: 40px; 
-    height: 40px; 
+    /* width: 60px; 
+    height: 60px;  */
+    
     display: flex;
     justify-content: center;
     align-items: center;
@@ -18,20 +19,36 @@
   }
 
   .likes-list li:nth-child(1) { transform: rotate(0deg) translateY(-150px); }
-  .likes-list li:nth-child(2) { transform: rotate(32.7deg) translateY(-150px); }
-  .likes-list li:nth-child(3) { transform: rotate(65.4deg) translateY(-150px); }
-  .likes-list li:nth-child(4) { transform: rotate(98.1deg) translateY(-150px); }
-  .likes-list li:nth-child(5) { transform: rotate(130.8deg) translateY(-150px); }
-  .likes-list li:nth-child(6) { transform: rotate(163.5deg) translateY(-150px); }
-  .likes-list li:nth-child(7) { transform: rotate(196.2deg) translateY(-150px); }
-  .likes-list li:nth-child(8) { transform: rotate(228.9deg) translateY(-150px); }
-  .likes-list li:nth-child(9) { transform: rotate(261.6deg) translateY(-150px); }
-  .likes-list li:nth-child(10) { transform: rotate(294.3deg) translateY(-150px); }
-  .likes-list li:nth-child(11) { transform: rotate(327deg) translateY(-150px); }
+  .likes-list li:nth-child(2) { transform: rotate(72deg) translateY(-150px); }
+  .likes-list li:nth-child(3) { transform: rotate(144deg) translateY(-150px); }
+  .likes-list li:nth-child(4) { transform: rotate(216deg) translateY(-150px); }
+  .likes-list li:nth-child(5) { transform: rotate(288deg) translateY(-150px); }
   
     .like-icon {
-    width: 40px;
-    height: 40px;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
     background: transparent
+    }
+
+    .likes-list li:nth-child(1) > img { 
+      width: 90px;
+      height: 90px;
+     }
+    .likes-list li:nth-child(2) > img {  
+      width: 75px;
+      height: 75px;
+    }
+    .likes-list li:nth-child(3) > img {  
+      width: 110px;
+      height: 110px;
+    }
+    .likes-list li:nth-child(4) > img { 
+      width: 65px;
+      height: 65px;
+    }
+    .likes-list li:nth-child(5) > img {  
+      width: 75px;
+      height: 75px;
     }
     
