--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -1,9 +1,18 @@
-.reasons-list > .li-element {
-     color: var(--color-secondary);
-    font-size: var(--typography-xs);
- }
+#about-container {
+height: 75vh
+}
+
+.reasons-list {
+  padding-bottom: 20px
+}
 
 .why-title {
   color: var(--color-primary);
-  font-size: var(--typography-medium);
+  font-size: var(--typography-small);
 }
+
+.reasons-list > .li-element {
+     color: var(--color-secondary);
+    font-size: 16px;
+ }
+
