--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -1,19 +1,27 @@
 .card {
   display: flex;
   flex-direction: column;
-  background-color: #4C4C4C95;
+  background-color: var(--color-grey-background);
   border-radius: 10px;
   border: 1.5px solid var(--color-white);
   padding: 2px;
   font-size: var(--typography-xxs)
 }
 .card:hover {
-  border: 1.5px solid var(--color-primary);
+  border: 2.5px solid var(--color-primary);
+}
+
+.card-info {
+  position: absolute;
+  bottom: 0;
+  background-color: var(--color-grey-background);
+  width: 100%;
+  padding: 10px
 }
 
 #experience-card > a {
   position: relative;
-  height: 150px;
+  height: 140px;
   background-color: var(--color-white)
 }
 
@@ -30,14 +38,13 @@
   }
  
   .position {
-    font-weight: bold;
     text-transform: uppercase;
   }
   
   .experience-info {
     position: absolute;
     bottom: 0;
-    background-color: #4C4C4C95; 
+    background-color: var(--color-grey-background); 
     width: 100%;
     padding: 10px
   }
@@ -54,10 +61,20 @@
 align-self: center
   }
 
-  .project-links {
-  display: flex;
-  justify-content: space-around;
-  padding: 10px
+  .skills-list {
+    pointer-events: none;
+    display: none;
+    border: var(--border-purple);
+    border-radius: 6px;
+    background-color: var(--color-white);
+    margin: 12px 0;
+    padding: 12px 12px 12px 16px;
+    width: 90%;
+  }
+  
+  [class~='show-ev'] {
+    pointer-events: auto;
+    display: block;
   }
 
   .project-img-info {
@@ -78,15 +95,13 @@ align-self: center
     justify-content: space-between;
     align-items: flex-start
   }
-  
-  .card-info {
-    position: absolute;
-    bottom: 0;
-    background-color: #4C4C4C99;
-    width: 100%;
+
+  .project-links {
+    display: flex;
+    justify-content: space-around;
     padding: 10px
-  }
-      
+    }
+        
   .project-link {
     display: flex;
     gap: 5px;
@@ -94,26 +109,17 @@ align-self: center
   }
   
   .project-link:hover, .organization:hover {
-    text-decoration: underline; 
+    transform: scale(1.1);
   }
-    
+
+  .link-icon {
+font-size: 16px
+  }
+
 @media screen and (max-width: 656px) {
-.logo-img {
+.logo {
 width: 100%;
 height:100%;
-}
-.project-img-title {
-  padding-bottom: 10px;
-  justify-content: center;
-  }
-.project-areas {
-display: block;
-}
-.project-techs {
-justify-content: center;
-}
-.project-github-link {
-  gap: 4px;
 }
 .project-in-github {
   font-size: 0.75rem;
