--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,10 +1,12 @@
 header {
   height: 60px;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     font-size: var(--typography-xxs);
     color: var(--color-white);
+    margin-left: 30%;
+    margin-right: 3%
   }
 
   .ul-navbar {
@@ -33,13 +35,8 @@ header {
     }
 
     @media screen and (max-width: 600px) {
-        header {
-         padding: 18px;
-         justify-content: space-between;
-        }
         nav {
           display: none;
-          font-size: var(--typography-xs)
         }
         .ul-navbar {
           display: block;
