--- a/src/pages/Experience/Experience.css
+++ b/src/pages/Experience/Experience.css
@@ -2,78 +2,52 @@
   display: grid;
   grid-template-columns: 35% 65%;
   grid-gap: 24px;
-  padding: 40px;
-  height: 75vh;
+  padding: 0 40px;
 }
 
 .experience-header {
-display: flex;
-flex-direction: column;
-justify-content: center;
-gap: 24px
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 24px;
 }
 
 .experience-title {
-font-size: var(--typography-xs);
-color: var(--color-secondary);
+  font-size: var(--typography-xs);
+  color: var(--color-secondary);
 }
 
 .marketing {
   font-size: var(--typography-small);
-color: var(--color-primary);
+  color: var(--color-primary);
 }
 
 .experiences-list {
   display: flex;
   flex-direction: column;
-  gap: 32px;
-  padding: 0 24px;
+  gap: 50px;
+  padding: 0 50px 40px 20px;
   animation: var(--animation-slide-in);
-  height: 70vh;
+  height: 75vh;
   overflow-y: scroll;
   scroll-behavior: smooth;
-  font-size: var(--typography-xxs)
-}
-
-.experience-card {
-  padding: 10px 10px 10px 0
-}
-
-.skills-list {
-  pointer-events: none;
-  display: none;
-  border: var(--border-purple);
-  border-radius: 6px;
-  background-color: var(--color-white);
-  margin: 12px 0;
-  padding: 12px 12px 12px 16px;
-  width: fit-content;
-}
-
-[class~='show-ev'] {
-  pointer-events: auto;
-  display: block;
+  font-size: var(--typography-xxs);
 }
 
 @media screen and (max-width: 856px) {
-.experiences-list {
-  animation: none;
+  .experience-container {
+    display: flex;
+    flex-direction: column;
+    padding: 18px;
+  }
+  .experience-header {
+    padding: 0 12px 12px 12px;
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
+  }
+  .experiences-list {
+    animation: none;
+    margin: 0;
+  }
 }
-.experience-container {
-  display: flex;
-  flex-direction: column;
-  padding: 18px;
-}
-.experience-header {
-  padding: 0 12px 12px 12px;
-  display: flex;
-  flex-direction: column;
-  gap: 18px;
-}
-
-.experiences-list {
-  margin: 0;
-}
-}
-
-  
