--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -3,13 +3,14 @@
   grid-template-columns: 60% 40%;
   align-items: center;
   height: 80vh;
-  padding: 40px
+  padding: 40px;
 }
 
 .personal-info {
   display: flex;
   flex-direction: column;
   gap: 24px;
+  max-width: 75%;
 }
 
 .personal-description {
@@ -24,42 +25,54 @@
 
 .occupation {
   color: var(--color-secondary);
-  font-size: var(--typography-small)
+  font-size: var(--typography-small);
 }
 
 .location {
-  color: #828282;
+  color: var(--color-grey-text);
   font-size: 14px;
   text-transform: uppercase;
 }
 
 .img-container {
-display: flex;
+  display: flex;
+  align-items: center;
 }
 
 .personal-img {
-  width: 300px; 
-  height: 300px; 
+  width: 300px;
+  height: 300px;
   border-radius: 50%;
-  background-color: #2D2D2D;
+  background-color: var(--color-grey-background);
   padding: 30px;
+  cursor: pointer;
 }
-
 
 @media screen and (max-width: 800px) {
   .container {
-      display: flex;
-      flex-direction: column;
-      padding: 18px;
+    display: flex;
+    flex-direction: column;
+    padding: 18px;
+    height: auto;
+    overflow: auto;
+    gap: 30px
   }
   .personal-info {
     gap: 18px;
-    }
-  .name, .personal-description {
-    font-size: var(--typography-xs)
+  }
+  .name,
+  .personal-description {
+    font-size: var(--typography-xs);
   }
   .occupation {
-    font-size: var(--typography-medium)
+    font-size: var(--typography-medium);
+  }
+  .img-container {
+    flex-direction: column;
+    padding: 20px 0
+  }
+  .personal-img {
+    width: 90%;
+    height: 90%
   }
 }
-
