--- a/src/components/LikesList/LikesList.css
+++ b/src/components/LikesList/LikesList.css
@@ -1,51 +1,70 @@
 .likes-list {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    animation: var(--animation-rotate);
-    margin-left: -150px
+    display: grid;
+    grid-template: repeat(2, 1fr) / repeat(3, 1fr);
   }
-  
-  .like {  
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    transform-origin: center; 
-    background: transparent
+  #dancing { 
+    margin-top: 20px
+     }
+
+  #sport { 
+ margin: 0 0 10px 60px
   }
 
-  .likes-list li:nth-child(1) { transform: rotate(0deg) translateY(-150px); }
-  .likes-list li:nth-child(2) { transform: rotate(72deg) translateY(-150px); }
-  .likes-list li:nth-child(3) { transform: rotate(144deg) translateY(-150px); }
-  .likes-list li:nth-child(4) { transform: rotate(216deg) translateY(-150px); }
-  .likes-list li:nth-child(5) { transform: rotate(288deg) translateY(-150px); }
-  
+  #breaking-bad { 
+    margin: 8px 0 0 80px;
+    }
+    
     .like-icon {
-    width: 100px;
-    height: 100px;
     border-radius: 50%;
-    background: transparent
     }
 
     .likes-list li:nth-child(1) > img { 
-      width: 90px;
-      height: 90px;
+      width: 100px;
+      height: 100px;
      }
     .likes-list li:nth-child(2) > img {  
-      width: 75px;
-      height: 75px;
+      width: 85px;
+      height: 85px;
     }
     .likes-list li:nth-child(3) > img {  
-      width: 110px;
-      height: 110px;
+      width: 120px;
+      height: 120px;
     }
     .likes-list li:nth-child(4) > img { 
-      width: 65px;
-      height: 65px;
-    }
-    .likes-list li:nth-child(5) > img {  
       width: 75px;
       height: 75px;
     }
+    .likes-list li:nth-child(5) > img {  
+      width: 90px;
+      height: 90px;
+    }
     
+    @media screen and (max-width: 600px) {
+      .likes-list li:nth-child(1) > img { 
+        width: 86px;
+        height: 86px;
+       }
+      .likes-list li:nth-child(2) > img {  
+        width: 72px;
+        height: 72px;
+      }
+      .likes-list li:nth-child(3) > img {  
+        width: 100px;
+        height: 100px;
+      }
+      .likes-list li:nth-child(4) > img { 
+        width: 60px;
+        height: 60px;
+      }
+      .likes-list li:nth-child(5) > img {  
+        width: 75px;
+        height: 75px;
+      }
+      #sport { 
+        margin: 0 0 5px 30px
+         }
+       
+         #breaking-bad { 
+           margin: 4px 0 0 40px;
+           }
+    }
