--- a/src/components/TechsLists/TechsLists.css
+++ b/src/components/TechsLists/TechsLists.css
@@ -76,15 +76,15 @@
   }
 
   #project-card > .project-techs >.tech > .tech-icon,
-  .filter > .techs-list >.tech > .tech-icon {
+  .filters-and-clear > .techs-list >.tech > .tech-icon {
     height: 20px;
     width: 20px;
   }
 
-  .filter > .techs-list >.tech > .tech-icon {
+  .filters-and-clear > .techs-list >.tech > .tech-icon {
     cursor: pointer
   }
-  .filter > .techs-list >.tech > .tech-icon:hover {
+  .filters-and-clear > .techs-list >.tech > .tech-icon:hover {
     transform: scale(1.1);
   }
 
@@ -100,7 +100,7 @@
     width: 70px
   }
  
-  @media screen and (max-width: 800px) {
+  @media screen and (max-width: 600px) {
     .img-container > .techs-list {
       width: 90%;
       height: 90%;
