--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -2,9 +2,14 @@
 height: 75vh
 }
 
+#about-container > .img-container{
+  display: block;
+  }
+
 .why-title {
   color: var(--color-primary);
   font-size: var(--typography-small);
+  padding-bottom: 12px
 }
 
 .reasons-list {
@@ -16,3 +21,15 @@ height: 75vh
     font-size: 16px;
  }
 
+ @media screen and (max-width: 600px) {
+ #about-container {
+  height: auto;
+  padding: 30px 30px 0px 30px
+  }
+  .why-title {
+font-size: 22px
+  }
+  #about-container > .img-container{
+    display: flex;
+    }
+}
