--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -48,7 +48,7 @@
   cursor: pointer;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 760px) {
   .container {
     display: flex;
     flex-direction: column;
@@ -71,8 +71,8 @@
     flex-direction: column;
     padding: 20px 0
   }
-  .personal-img {
-    width: 90%;
-    height: 90%
-  }
+.personal-img {
+  height: 240px;
+  width: 240px
+}
 }
