--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -5,7 +5,7 @@
   border-radius: 10px;
   border: 1.5px solid var(--color-white);
   padding: 2px;
-  font-size: var(--typography-xxs)
+  font-size: var(--typography-xxs);
 }
 .card:hover {
   border: 2.5px solid var(--color-primary);
@@ -16,115 +16,135 @@
   bottom: 0;
   background-color: var(--color-grey-background);
   width: 100%;
-  padding: 10px
+  padding: 10px;
 }
 
 #experience-card > a {
   position: relative;
   height: 140px;
-  background-color: var(--color-white)
+  background-color: var(--color-white);
 }
 
 .logo {
-    border-radius: 3px;
-    object-fit: cover;
-    height: 100%;
-    width: 100%;
-    overflow: hidden;
-  }
+  border-radius: 3px;
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
 
-  .organization {
-    font-size: var(--typography-xs);
-  }
- 
-  .position {
-    text-transform: uppercase;
-  }
-  
-  .experience-info {
-    position: absolute;
-    bottom: 0;
-    background-color: var(--color-grey-background); 
-    width: 100%;
-    padding: 10px
-  }
+.organization {
+  font-size: var(--typography-xs);
+}
 
-  .description-responsabilities {
-    display: grid;
-    grid-template-columns: 75% 25%;
-    justify-items: stretch;
-    align-items: center;
-    padding-left: 10px
-  }
-  
-  .skills, .skills-list {
-align-self: center
-  }
+.position {
+  text-transform: uppercase;
+}
 
-  .skills-list {
-    pointer-events: none;
-    display: none;
-    border: var(--border-purple);
-    border-radius: 6px;
-    background-color: var(--color-white);
-    margin: 12px 0;
-    padding: 12px 12px 12px 16px;
-    width: 90%;
-  }
-  
-  [class~='show-ev'] {
-    pointer-events: auto;
-    display: block;
-  }
+.experience-info {
+  position: absolute;
+  bottom: 0;
+  background-color: var(--color-grey-background);
+  width: 100%;
+  padding: 10px;
+}
 
-  .project-img-info {
-    height: 300px;
-    display: flex;
-    flex-direction: column;
-    position: relative;
-  }
-  
-  .project-img {
-    height: 100%;
-    border-radius: 3px;
-    object-fit: cover;
-  }
-  
-  .project-title-date, .organization-date {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start
-  }
+.description-responsabilities {
+  display: grid;
+  grid-template-columns: 75% 25%;
+  justify-items: stretch;
+  align-items: center;
+  padding-left: 10px;
+}
 
-  .project-links {
-    display: flex;
-    justify-content: space-around;
-    padding: 10px
-    }
-        
-  .project-link {
-    display: flex;
-    gap: 5px;
-    align-items: center;
-  }
-  
-  .project-link:hover, .organization:hover {
-    transform: scale(1.1);
-  }
+.skills,
+.skills-list {
+  align-self: center;
+}
 
-  .link-icon {
-font-size: 16px
-  }
+.skills-list {
+  pointer-events: none;
+  display: none;
+  border: var(--border-purple);
+  border-radius: 6px;
+  background-color: var(--color-white);
+  margin: 12px 0;
+  padding: 12px 12px 12px 16px;
+  width: 90%;
+}
+
+[class~='show-ev'] {
+  pointer-events: auto;
+  display: block;
+}
+
+.project-img-info {
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.project-img {
+  height: 100%;
+  border-radius: 3px;
+  object-fit: cover;
+}
+
+.progress-show {
+  color: var(--color-white);
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  text-transform: uppercase;
+  font-size: 35px;
+  position: absolute;
+  display: flex;
+  align-self: center;
+  font-weight: bold;
+  transform: rotate(-45deg);
+  top: 30%;
+}
+
+.progress-hide {
+  display: none;
+}
+
+.project-title-date,
+.organization-date {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.project-links {
+  display: flex;
+  justify-content: space-around;
+  padding: 10px;
+}
+
+.project-link {
+  display: flex;
+  gap: 5px;
+  align-items: center;
+}
+
+.project-link:hover,
+.organization:hover {
+  transform: scale(1.1);
+}
+
+.link-icon {
+  font-size: 16px;
+}
 
 @media screen and (max-width: 600px) {
-.logo {
-width: 100%;
-height:100%;
-}
-.project-in-github {
-  font-size: 0.75rem;
-}
-.skills {
-  display:none;
-}
+  .logo {
+    width: 100%;
+    height: 100%;
+  }
+  .project-in-github {
+    font-size: 0.75rem;
+  }
+  .skills {
+    display: none;
+  }
 }
