--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,68 +1,67 @@
 header {
   height: 60px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: var(--typography-xxs);
-    color: var(--color-white);
-    margin-left: 30%;
-    margin-right: 3%
-  }
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: var(--typography-xxs);
+  color: var(--color-white);
+  margin-left: 30%;
+  margin-right: 3%;
+}
 
+.ul-navbar {
+  display: flex;
+  gap: 48px;
+}
+
+.selected-link {
+  color: var(--color-primary);
+}
+
+nav li:hover {
+  transform: scale(1.1);
+}
+
+.ul-social {
+  display: flex;
+  gap: 12px;
+  font-size: var(--typography-xxs);
+}
+
+.mobile-contacts {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+#mobile-menu,
+#close-menu {
+  display: none;
+  color: var(--color-primary);
+  font-size: var(--typography-small);
+}
+
+@media screen and (max-width: 760px) {
+  header {
+    margin: 10px 15px;
+    height: auto;
+  }
+  nav {
+    display: none;
+  }
   .ul-navbar {
     display: flex;
-    gap: 48px;
+    width: 75%;
+    gap: 24px;
   }
-
-  #home-link {
-    color: var(--color-primary)
-  }
-  
-  nav li:hover {
-    transform: scale(1.1);
-  }
-
-  .ul-social {
+  #mobile-menu {
     display: flex;
-    gap: 12px;
-    font-size: var(--typography-xxs)
+    justify-content: flex-end;
   }
-  
-  .mobile-contacts {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start
-  }
-
-#mobile-menu, #close-menu {
+  [class~='hide'] {
     display: none;
-    color: var(--color-primary);
-    font-size: var(--typography-small)
-    }
-
-    @media screen and (max-width: 760px) {
-      header {
-        margin: 10px 15px;
-        height: auto;
-      }
-        nav {
-          display: none;
-        }
-        .ul-navbar {
-          display: flex;
-          width: 75%;
-          gap: 24px
-         }
-         #mobile-menu {
-        display: flex;
-        justify-content: flex-end;
-        }  
-        [class~='hide'] {
-          display: none;
-        }
-        [class~='show'] {
-          display: block;
-        }
-        
-      }
-      
+  }
+  [class~='show'] {
+    display: block;
+  }
+}
