--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -42,8 +42,10 @@
 .personal-img {
   width: 300px;
   height: 300px;
+  object-fit: cover;
   border-radius: 50%;
-  background-color: var(--color-grey-background);
+  /* background-color: var(--color-grey-background); */
+  background-color: rgb(10, 10, 10);
   padding: 30px;
   cursor: pointer;
 }
